# Rathje_DS_template

./: .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml
docs/: index.md
docs/arduino/: usecase.md  usecase_matlab.md
docs/arduino/FreeField-JupyterNB/: freeFieldEffectiveJupyter_community.ipynb
docs/brandenberg/: usecase.md
docs/brandenberg/apiusecases/: usecase.md
docs/brandenberg/mpi4py/: usecase.md
docs/dawson/: usecase.md  usecase2.md
docs/haan/: usecase.md
docs/kareem/: usecase.md
docs/kareem/DEDM-HR/: usecase.md
docs/kumar/: usecase.md
docs/kumar/learnmpm/: usecase.md
docs/lowes/: usecase.md
docs/mosqueda/: usecase.md
docs/padgett/: usecase.md
docs/pinelli/: usecase.md
docs/rathje/: usecase.md
docs/vantassel_and_zhang/: usecase.md
